feat: adicionar controle de acesso baseado em roles (USER, ADMIN)
- define roles no modelo de usuário
- implementa authorities do Spring Security
- protege endpoints administrativos